fix: fix task container alignment

--- a/src/assets/styles/components/tasks.sass
+++ b/src/assets/styles/components/tasks.sass
@@ -24,7 +24,7 @@
 
 @media (min-width: $screen-md-min)
     .section__task-container
-        justify-content: start
+        justify-content: center
         align-self: center
         justify-self: center
         overflow-y: visible
